# MavlinkTagController2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CommandHandler.cpp  CommandHandler.h  Connection.cpp  Connection.h  LogFileManager.cpp  LogFileManager.h  LogRequestHandler.h  Makefile  MavlinkFtpServer.cpp  MavlinkFtpServer.h  MavlinkSystem.cpp  MavlinkSystem.h  MonitoredProcess.cpp  PULSE_DETECTION_ANALYSIS.md  PulseHandler.cpp  PulseHandler.h  PulseSimulator.cpp  PulseSimulator.h  README.md  SerialConnection.cpp  TagDatabase.cpp  TagDatabase.h  TelemetryCache.cpp  UDPPulseReceiver.cpp  UDPPulseReceiver.h  channelizerTuner.cpp  formatString.h  full_setup.sh  log.cpp  log.h  main.cpp  setup_venv.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  linux_compile.yml  mac_compile.yml
airspyhf_zeromq/: CMakeLists.txt
airspyhf_zeromq/cmake/modules/: FindLIBAIRSPY.cmake  FindUSB1.cmake
airspyhf_zeromq/tests/: CMakeLists.txt
airspyhf_zeromq/tools/: 52-airspyhf.rules  CMakeLists.txt
airspyhf_zeromq/tools/src/: CMakeLists.txt  airspyhf_rx.c
controller/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Connection.cpp  LogFileManager.cpp  LogFileManager.h  LogRequestHandler.cpp  MavlinkSystem.cpp  MavlinkSystem.h  MonitoredProcess.h  PulseHandler.cpp  PulseHandler.h  PulseSimulator.cpp  PulseSimulator.h  SimulatorTelemetryPublisher.cpp  SimulatorTelemetryPublisher.h  TelemetryCache.cpp  boost_process_compat.h  log.cpp  main.cpp
decimator/: CMakeLists.txt
decimator/src/: main.cpp
decimator/tests/: test_main.cpp
detector/: CROSS_RATE_REJECTION.md  CW_REJECTION.md  RATE_SWITCH_DETECTOR_DESIGN.md  README.md  pulse_detector.py  run_detector.sh
setup/: crontab-start-controller.sh  full_setup.sh
simulator/: README.md  iq_simulator.py  requirements.txt  run_sim_pipeline.sh
